--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,10 +21,14 @@
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-scroll": "^1.8.9",
+    "react-type-animation": "^3.0.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.13",
     "cors": "^2.8.5",
     "eslint-config-prettier": "^8.6.0",
