--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@react-pdf/renderer": "^3.1.12",
     "@splidejs/react-splide": "^0.7.12",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
