--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
     "react-type-animation": "^3.0.1",
+    "swiper": "^11.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
